# crabforge

./: README.md
api-auth/: Cargo.toml
api-auth/src/: main.rs
api-call/: Cargo.toml
api-call/src/: main.rs
async-rust/: Cargo.toml
async-rust/src/: main.rs
cv-reader/: Cargo.toml
cv-reader/src/: main.rs
file-compressor/: Cargo.toml
file-compressor/src/: main.rs
file-decompressor/: Cargo.toml
file-decompressor/src/: main.rs
firezone-cli/: Cargo.toml
firezone-cli/src/: main.rs
get-request/: Cargo.toml
get-request/src/: main.rs
hyper-server/: Cargo.toml
hyper-server/client/: hyper-client.rs
hyper-server/proxy/: hyper-proxy.rs
hyper-server/server/: hyper-server.rs
image-downloader/: Cargo.toml
image-downloader/src/: main.rs
json-reader/: Cargo.toml
json-reader/src/: main.rs
json-writer/: Cargo.toml
json-writer/src/: main.rs
link-extractor/: Cargo.toml
link-extractor/src/: main.rs
rhai-actix/: Cargo.toml
rhai-actix/src/: add.rhai  main.rs  multiply.rhai
rust-firebase/: Cargo.toml
rust-firebase/src/: main.rs
spotify-search/: Cargo.toml
spotify-search/src/: main.rs
trait-impl/: Cargo.toml
trait-impl/src/: error_trait.rs  main.rs
