[package]
name = "hyper-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
hyper = { version = "1.8.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

# Define multiple binaries
[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "hyper-server"
path = "server/hyper-server.rs"

[[bin]]
name = "hyper-client"
path = "client/hyper-client.rs"
